--- a/web/templates/deviceTable.html
+++ b/web/templates/deviceTable.html
@@ -4,7 +4,7 @@
     <title>Pringletron</title>
 <meta charset="UTF-8">
     
-<script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+<script src="js/socket.io.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
