using flask static paths

--- a/web/templates/deviceTable.html
+++ b/web/templates/deviceTable.html
@@ -4,8 +4,8 @@
     <title>Pringletron</title>
 <meta charset="UTF-8">
     
-<script src="js/socket.io.min.js"></script>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="static/js/socket.io.min.js"></script>
+<link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
     
